implemented some functions of service